--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# list of plugins
+# [plugins]
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
@@ -21,7 +21,8 @@ unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
-# vim pane navigation
+# [NAVIGATION]
+## vim pane navigation
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
