--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,4 +1,4 @@
-# [plugins]
+# list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
@@ -6,9 +6,9 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'kolach/tmux-temp'
 
 # [SETTINGS]
-set -g  status-right '| #{cpu_percentage} | #{temp_cpu} '
+set -g  status-right '| #{cpu_percentage} | #{temp_cpu}'
 # set -ga status-right '| #{}'
-set -ga status-right '| #{battery_icon}#{battery_percentage} | %a %h-%d %H:%M '
+set -ga status-right '| #{battery_icon} #{battery_percentage} | %a %h-%d %H:%M '
 
 # tmux status bar positon
 set -g status-position top
@@ -21,16 +21,22 @@ unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
-# [NAVIGATION]
-## vim pane navigation
+# vim pane switch
+
+# NOTE: l default assigned to last-window
+
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
-# NOTE: l default assigned to last-window
 bind -r l select-pane -R
 
 bind -r K swap-pane -U
 bind -r J swap-pane -D
+
+bind -r Up resize-pane -U 5
+bind -r Down resize-pane -D 5
+bind -r Left resize-pane -L 5
+bind -r Right resize-pane -R 5
 
 # init tmux plugin manager (keep at the bottom)
 run '~/.tmux/plugins/tpm/tpm'
