--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -40,7 +40,8 @@ set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current dir
 # set -g @rose_pine_left_separator ' > ' # The strings to use as separators are 1-space padded
 # set -g @rose_pine_right_separator ' < ' # Accepts both normal chars & nerdfont icons
 # set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
-# set -g @rose_pine_window_separator ' - ' # Replaces the default `:` between the window number and name
+set -g @rose_pine_window_separator '.' # Replaces the default `:` between the window number and name
+set -g @rose_pine_window_status_separator '|' # Changes separator between windows
 
 # These are not padded
 # set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
@@ -63,6 +64,10 @@ set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current dir
 # tmux status bar positon
 set -g status-position top
 # set -g status-right-length 240
+
+# Start window and pane numbering from 1 instead of 0
+set -g base-index 1
+set -g pane-base-index 1
 
 # [KEYBINDS]
 # NOTE: binding to `a` because `a` is next to `ctrl` in JP keyboard layout
@@ -87,6 +92,9 @@ bind -r Up resize-pane -U 5
 bind -r Down resize-pane -D 5
 bind -r Left resize-pane -L 5
 bind -r Right resize-pane -R 5
+
+# Join panes - merge windows into current window
+bind-key @ command-prompt -p "join pane from window:" "join-pane -v -s '%%'"
 
 # init tmux plugin manager (keep at the bottom)
 run '~/.tmux/plugins/tpm/tpm'
